force-app/main/default/objects/Recebimento_de_item__c/Recebimento_de_item__c.object-meta.xml
<CustomObject>
    <label>Recebimento de item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número do recebimento de item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recebimentos de item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>