force-app/main/default/objects/Recebimento_de_item__c/fields/Data_de_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_recebimento__c</fullName>
    <label>Data de recebimento</label>
    <type>Date</type>
</CustomField>