force-app/main/default/objects/Recebimento_de_item__c/fields/Quantidade_recebida__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_recebida__c</fullName>
    <label>Quantidade recebida</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>