force-app/main/default/objects/Recebimento_de_item__c/fields/Requisicao_de_produto__c.field-meta.xml
<CustomField>
    <fullName>Requisicao_de_produto__c</fullName>
    <label>Requisição de produto</label>
    <referenceTo>Requisicao_de_item__c</referenceTo>
    <relationshipLabel>Recebimentos de item</relationshipLabel>
    <relationshipName>Atendimentos_de_produto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>